organize code of full mode script

--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -1,7 +1,5 @@
 site.ipGetter.url=/teste-draft
 
-site.stgLastUpdateGetter.url=/group/control_panel/manage?p_p_id=165&p_p_lifecycle=0&p_p_state=maximized&p_p_mode=view&doAsGroupId=10184&refererPlid=25742&controlPanelCategory=current_site.pages#_165_tab=_165_customFields
-site.stgLastUpdateSetter.url=/control_panel/manage?p_p_id=165&p_p_lifecycle=1&p_p_state=maximized&p_p_mode=view&doAsGroupId=10184&refererPlid=2645764&controlPanelCategory=current_site.pages&_165_struts_action=%2Fsite_settings%2Fedit_site
 site.appManager.url=/group/control_panel?refererPlid=2645764&p_p_id=3_WAR_marketplaceportlet
 
 site.login.url=/web/guest/administracao?p_p_id=58&p_p_lifecycle=1&p_p_state=normal&p_p_mode=view&p_p_col_id=column-1&p_p_col_count=1&_58_struts_action=%2Flogin%2Flogin
@@ -9,11 +7,10 @@ site.logout.url=/c/portal/logout
 site.controlPanel.url=/group/control_panel/manage?p_p_id=137&p_p_lifecycle=1&p_p_state=maximized&p_p_mode=view&refererPlid=2645764&_137_struts_action=%2Fadmin_server%2Fedit_server
 site.ipGetter.element=computer-name
 
-site.stgLastUpdateGetter.element=znux_null_null_last_2d_stg_2d_publication
-site.probe.macro.element=smiles-club__join-macro
-site.probe.optin.element=pageRegister
 site.probe.app.element=info
 site.probe.app.element.child=title
+site.redeploy.portlets.withPlugins=smiles-memberships-portlet,smiles-account-portlet
+site.redeploy.portlets.withoutPlugins=Ehcache Cluster EE Web
 
 
 app.login.success.probe=Administração
