add imagelogo in the console

--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -1,6 +1,7 @@
 site.ipGetter.url=/teste-draft
 
 site.appManager.url=/group/control_panel?refererPlid=2645764&p_p_id=3_WAR_marketplaceportlet
+site.customFields.url=/group/control_panel/manage?p_p_id=165&p_p_lifecycle=0&p_p_state=maximized&p_p_mode=view&doAsGroupId=10184&refererPlid=25742&controlPanelCategory=current_site.pages&_165_historyKey=_165_customFields
 
 site.login.url=/web/guest/administracao?p_p_id=58&p_p_lifecycle=1&p_p_state=normal&p_p_mode=view&p_p_col_id=column-1&p_p_col_count=1&_58_struts_action=%2Flogin%2Flogin
 site.logout.url=/c/portal/logout
