add build version msg

--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -17,3 +17,5 @@ site.redeploy.portlets.withoutPlugins=Ehcache Cluster EE Web
 app.login.success.probe=Administração
 
 app.connection.timeout=60000
+
+build.version=1.0.1
