--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -7,6 +7,7 @@ site.login.url=/web/guest/administracao?p_p_id=58&p_p_lifecycle=1&p_p_state=norm
 site.logout.url=/c/portal/logout
 site.controlPanel.url=/group/control_panel/manage?p_p_id=137&p_p_lifecycle=1&p_p_state=maximized&p_p_mode=view&refererPlid=2645764&_137_struts_action=%2Fadmin_server%2Fedit_server
 site.ipGetter.element=computer-name
+site.licenseManager.url=/c/portal/license?p_l_id=10178&p_p_state=pop_up
 
 site.probe.app.element=info
 site.probe.app.element.child=title
@@ -18,5 +19,5 @@ app.login.success.probe=Administração
 
 app.connection.timeout=60000
 
-build.version=1.1.2
+build.version=1.1.3
 git.repository=https://github.com/marceltanuri/script-liferay-robot
