update config of licenseManager

--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -8,6 +8,7 @@ site.logout.url=/c/portal/logout
 site.controlPanel.url=/group/control_panel/manage?p_p_id=137&p_p_lifecycle=1&p_p_state=maximized&p_p_mode=view&refererPlid=2645764&_137_struts_action=%2Fadmin_server%2Fedit_server
 site.ipGetter.element=computer-name
 site.licenseManager.url=/c/portal/license?p_l_id=10178&p_p_state=pop_up
+site.licenseManager.element=license-table
 
 site.probe.app.element=info
 site.probe.app.element.child=title
