Correções para ambiente RED da Smiles

--- a/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
+++ b/src/br/com/mtanuri/scriptLiferayRobot/config/config.properties
@@ -1,4 +1,4 @@
-site.ipGetter.url=/teste-draft
+site.ipGetter.url=/web/guest/teste-draft
 
 site.appManager.url=/group/control_panel?refererPlid=2645764&p_p_id=3_WAR_marketplaceportlet
 site.customFields.url=/group/control_panel/manage?p_p_id=165&p_p_lifecycle=0&p_p_state=maximized&p_p_mode=view&doAsGroupId=10184&refererPlid=25742&controlPanelCategory=current_site.pages&_165_historyKey=_165_customFields
